--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,8 @@
         "psr-4": {
             "SimpleMVC\\Test\\": "test/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8.5"
     }
 }
